--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.16.3",
+    "@react-email/render": "^1.3.1",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
+    "mailgen": "^2.0.30",
     "next": "15.5.3",
+    "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-indiana-drag-scroll": "^2.2.1"
+    "react-icons": "^5.5.0",
+    "react-indiana-drag-scroll": "^2.2.1",
+    "resend": "^6.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -25,6 +34,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "prisma": "^6.16.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
