--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@capacitor/android": "^7.4.3",
+    "@capacitor/cli": "^7.4.3",
+    "@capacitor/core": "^7.4.3",
     "@hello-pangea/dnd": "^18.0.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.16.3",
